# reversible

./: .env  Makefile  README.md  pyproject.toml
app/: deps.py  main.py  models.py  pyproject.toml  test_main.py
app/core/: config.py  db.py  validate_image.py
db-models/: pyproject.toml
db-models/src/db_models/: __init__.py
db_models/: __init__.py  pyproject.toml
demo/: index.html  script.js
modifier/: __init__.py  pyproject.toml  test_modifier.py
modifier/src/modifier/: __init__.py  bit_flipper.py  test_bit_flipper.py  test_modifier.py
verifier/: __init__.py  db.py  main.py  pyproject.toml  reverser.py  test_db.py  test_main.py  test_reverser.py  test_verifier.py
